  . $GLOBALS became a JIT autoglobal, so it's initialized only if used
    (this may affect opcode caches)
  . simplified string ofset reading. $str[1][0] now is a legal construct.
  . ZEND_FETCH_*_R operations simplified and can't be used with EXT_TYPE_UNUSED
    flag any more. Thit is very rare and useless case. ZEND_FREE might be
    required after them instead.
- Added concept of interned strings. All strings constants known at compile
  time are allocated in a single copy and never changed. (Dmitry)
- Added an optimization which saves memory and emalloc/efree calls for empty
  HashTables (Stas, Dmitry)

- Added support for Traits. (Stefan)
- Added array dereferencing support. (Felipe)
- Added DTrace support. (David Soria Parra)
- Added Tokyo Cabinet abstract DB support to ext/dba. (Michael Maclean)
- Added Jenkins's one-at-a-time hash support to ext/hash. (Martin Jansen)
- Added FNV-1 hash support to ext/hash. (Michael Maclean)
- Added ReflectionExtension::isTemporary() and
  ReflectionExtension::isPersistent(). (Johannes)
- Added ReflectionZendExtension class. (Johannes)
- Added ReflectionClass::isCloneable(). (Felipe)
- Added command line option --rz to CLI. (Johannes)
- Added closure $this support back. (Stas)
- Added SplObjectStorage::getHash() hook. (Etienne)
- Added JsonSerializable interface (Sara)
- Added JSON_BIGINT_AS_STRING, extended json_decode() sig with $options. (Sara)
- Added support for storing upload progress feedback in session data. (Arnaud)
- Added support for CURLOPT_MAX_RECV_SPEED_LARGE and CURLOPT_MAX_SEND_SPEED_LARGE.
  FR #51815. (Pierrick)
- Added iterator support in MySQLi. mysqli_result implements Traversable.
  (Andrey, Johannes)
- Added scalar typehinting. (Ilia, Derick)
- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 
  numeric strings to integers. (Ilia)
- Added support for object references in recursive serialize() calls. FR #36424.
  (Mike)