@@ -25,6 +25,7 @@
   . ZEND_FETCH_*_R operations simplified and can't be used with EXT_TYPE_UNUSED
     flag any more. Thit is very rare and useless case. ZEND_FREE might be
     required after them instead.
+  . improved performance of FastCGI request parsing
 - Added concept of interned strings. All strings constants known at compile
   time are allocated in a single copy and never changed. (Dmitry)
 - Added an optimization which saves memory and emalloc/efree calls for empty
